--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,12 @@
       {% endif %}
       -->
     </header>
-
+    <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
     <main id="content" class="main-content" role="main">
       {{ content }}
 
