--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,10 +63,9 @@
       -->
     </header>
     <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a class="active" href="https://mobb.ninja/">Home</a>
+  <a href="https://source.redhat.com/groups/public/mobb" target="_blank">Source</a>
+  <a href="https://github.com/rh-mobb/" target="_blank">GitHub</a>
 </div>
     <main id="content" class="main-content" role="main">
       {{ content }}
