remove source, fix github link
Signed-off-by: Paul Czarkowski <username.taken@gmail.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
 <style>
-  
+
 .topnav {
   overflow: hidden;
   background-color: #333;
@@ -64,8 +64,7 @@
     </header>
     <div class="topnav">
   <a class="active" href="https://mobb.ninja/">Home</a>
-  <a href="https://source.redhat.com/groups/public/mobb" target="_blank">Source</a>
-  <a href="https://github.com/rh-mobb/" target="_blank">GitHub</a>
+  <a href="https://github.com/rh-mobb/documentation" target="_blank">GitHub</a>
 </div>
     <main id="content" class="main-content" role="main">
       {{ content }}
