--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,6 +67,7 @@
   <a href="https://github.com/rh-mobb/documentation" target="_blank">GitHub</a>
 </div>
     <main id="content" class="main-content" role="main">
+      <br><pre><code>Officially supported documentation is available at https://docs.openshift.com.</code></pre><br>
       {{ content }}
 
       <footer class="site-footer">
