--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,22 @@
   background-color: #04AA6D;
   color: white;
 }
+
+.alert, .callout {
+    overflow: hidden;
+}
+.alert-warning {
+    background-color: #fcf8e3;
+    border-color: #fbeed5;
+    color: #c09853;
+}
+
+.alert {
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
 </style>
     {% if site.google_analytics %}
       <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
@@ -67,7 +83,7 @@
   <a href="https://github.com/rh-mobb/documentation" target="_blank">GitHub</a>
 </div>
     <main id="content" class="main-content" role="main">
-      <br><pre><code>Disclaimer: Mobb.ninja is not official Red Hat documentation - These guides may be experimental, proof of concept or early adoption. Officially supported documentation is available at https://docs.openshift.com.</code></pre><br>
+      <p class="alert alert-warning"><b>IMPORTANT NOTE</b>: This site is not official Red Hat documentation and is provided for informational purposes only. These guides may be experimental, proof of concept, or early adoption. Officially supported documentation is available at <a href="https://docs.openshift.com" target="_blank">docs.openshift.com</a> and <a href="https://access.redhat.com" target="_blank">access.redhat.com</a>.</p>
       {{ content }}
 
       <footer class="site-footer">
