adding the google analytics template to the header partial so its included on each of the site's content pages

--- a/themes/relearn/layouts/partials/header.html
+++ b/themes/relearn/layouts/partials/header.html
@@ -24,6 +24,7 @@
     {{- partial "favicon.html" . }}
     {{- partial "stylesheet.html" . }}
     {{- partial "custom-header.html" . }}
+    {{ template "_internal/google_analytics.html" . }}
   </head>
   <body class="mobile-support {{ (partial "output-format.hugo" .) }}{{- if .Site.Params.disableInlineCopyToClipBoard }} disableInlineCopyToClipboard{{ end }}" data-url="{{ .RelPermalink }}">
     <div id="body" class="default-animation">
