feat: add skipMetadata front matter to allow skipping of author and modified info
Signed-off-by: Dustin Scott <dscott@redhat.com>

--- a/layouts/partials/heading-post.html
+++ b/layouts/partials/heading-post.html
@@ -1,4 +1,5 @@
 {{ .Params.headingPost | safeHTML }}
+{{ if not .Params.skipMetadata }}
 <hr>
 <p>
     <!-- authors comes from the authors metadata -->
@@ -44,3 +45,4 @@
     {{ end }}
 </p>
 <hr>
+{{ end }}
