fix: add breadcrumbs

--- a/layouts/partials/rhds/nav.html
+++ b/layouts/partials/rhds/nav.html
@@ -23,7 +23,6 @@
           <rh-navigation-secondary-menu-section>
             <h3 slot="header">Azure Red Hat OpenShift (ARO)</h3>
             <ul slot="links">
-              <li><a href="#">Read more on ROSA</a></li>
               <li><a href="#">Considerations for Disaster Recovery with ARO</a></li>
               <li><a href="#">Getting Started with the Azure Key Vault CSI Driver</a></li>
               <li><a href="#">Deploy and use the Azure Service Operator V1(ASO)</a></li>
@@ -33,6 +32,19 @@
               <a href="#">Read more on ARO</a>
             </rh-cta>
           </rh-navigation-secondary-menu-section>
+
+          <rh-navigation-secondary-menu-section>
+            <h3 slot="header">Google Cloud Platform (GCP)</h3>
+            <ul slot="links">
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+            </ul>
+            <rh-cta slot="cta">
+              <a href="#">Read more on GCP</a>
+            </rh-cta>
+          </rh-navigation-secondary-menu-section>          
         </rh-navigation-secondary-menu>
       </rh-navigation-secondary-dropdown>
     </li>
