adding the banner

--- a/layouts/partials/banner.html
+++ b/layouts/partials/banner.html
@@ -11,4 +11,4 @@
     color: #c09853;
 }
 </style>
-<p class="alert alert-warning"><b>IMPORTANT NOTE</b>: This site is not official Red Hat documentation and is provided for informational purposes only. These guides may be experimental, proof of concept, or early adoption. Officially supported documentation is available at <a href="https://docs.openshift.com" target="_blank">docs.openshift.com</a> and <a href="https://access.redhat.com" target="_blank">access.redhat.com</a>.</p>
+<p class="alert alert-warning">This content is authored by Red Hat experts, but has not yet been tested on every supported configuration.</p>
