--- a/themes/rhds/layouts/_default/list.html
+++ b/themes/rhds/layouts/_default/list.html
@@ -1,5 +1,6 @@
 {{ define "main" }}
-  {{- partial "partials/banner.html"}}
+  {{- partial "breadcrumbs.html" . }}
+  {{- partial "banner.html" . }}
   <h1>{{ .Title }}</h1>
   {{ .Content }}
   {{ range .Pages }}
