--- a/themes/rhds/layouts/_default/single.html
+++ b/themes/rhds/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
-  {{ partial "breadcrumbs.html" . }}
-  {{- partial "partials/banner.html"}}
+  {{- partial "breadcrumbs.html" . }}
+  {{- partial "banner.html" . }}
   <h1>{{ .Title }}</h1>
 
   {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
