fix: organize meta data, fix alert accessibility, add tags partial

--- a/themes/rhds/layouts/_default/list.html
+++ b/themes/rhds/layouts/_default/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   {{- partial "breadcrumbs.html" . }}
-  {{- partial "banner.html" . }}
+  {{- partial "rhds/alert.html" . }}
   <h1>{{ .Title }}</h1>
   {{ .Content }}
   {{ range .Pages }}
