--- a/layouts/partials/rhds/hero.html
+++ b/layouts/partials/rhds/hero.html
@@ -1,10 +1,10 @@
-<div id="hero">
+<section id="hero">
   <div class="hero-content">
-    <h2>Quickstarts / Getting Started</h2>
+    <h1>Quickstarts / Getting Started</h1>
     <p>Get started with using Red Hat OpenShift on AWS (ROSA) or Azure Red Hat OpenShift (ARO)</p>
     <div class="hero-cta">
       <rh-cta variant="primary"><a href="/docs/rosa/sts/">Red Hat OpenShift on AWS (ROSA)</a></rh-cta>
       <rh-cta variant="secondary"><a href="/docs/quickstart-aro/">Azure Red Hat OpenShift (ARO)</a></rh-cta>
     </div>
   </div>
-</div>
+</section>
