--- a/themes/rhds/assets/css/main.css
+++ b/themes/rhds/assets/css/main.css
@@ -14,19 +14,18 @@ html, body {
 body {
   color: #222;
   font-family: var(--rh-font-family-body-text, RedHatText, 'Red Hat Text', 'Noto Sans Arabic', 'Noto Sans Hebrew', 'Noto Sans JP', 'Noto Sans KR', 'Noto Sans Malayalam', 'Noto Sans SC', 'Noto Sans TC', 'Noto Sans Thai', Helvetica, Arial, sans-serif);
-  font-size: 1rem;
+  font-size: var(--rh-font-size-body-text-lg, 1.125rem);
   line-height: var(--rh-line-height-body-text, 1.5);
 }
 
-a {
+a,
+a:visited {
   color: var(--rh-color-interactive-blue-darker, #0066cc);
-  text-decoration: none;
 }
 
 a:hover, 
 a:focus {
   color: var(--rh-color-interactive-blue-darkest, #004080);
-  text-decoration: underline;
 }
 
 :is(h1, h2, h3, h4, h5, h6) {
@@ -172,4 +171,10 @@ main p {
   background-color: #fcf8e3;
   border-color: #fbeed5;
   color: #c09853;
+}
+
+
+/* Bug Fixes */
+rh-navigation-secondary a[slot="logo"]:visited {
+  color: var(--rh-color-text-primary-on-light, #151515);
 }
