--- a/themes/rhds/layouts/_default/single.html
+++ b/themes/rhds/layouts/_default/single.html
@@ -1,11 +1,14 @@
 {{ define "main" }}
   {{- partial "breadcrumbs.html" . }}
-  {{- partial "banner.html" . }}
+  {{- partial "rhds/alert.html" . }}
   <h1>{{ .Title }}</h1>
 
   {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
   {{ $dateHuman := .Date | time.Format ":date_long" }}
+
   <time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
+  
+  {{- partial "tags.html" . }}
 
   {{ .Content }}
   {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
