--- a/themes/rhds/layouts/partials/head.html
+++ b/themes/rhds/layouts/partials/head.html
@@ -1,5 +1,4 @@
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
+{{ partial "head/meta.html" .}}
 <title>{{ if .IsHome }}{{ site.Title }}{{ else }}{{ printf "%s | %s" .Title site.Title }}{{ end }}</title>
 {{ partialCached "head/css.html" . }}
 {{ partialCached "head/js.html" . }}
