--- a/themes/rhds/layouts/partials/head/js.html
+++ b/themes/rhds/layouts/partials/head/js.html
@@ -1,14 +1,16 @@
 <!--
   JSPM Generator Import Map
-  Edit URL: https://generator.jspm.io/#U2VhYGDhD80rySzJSU1hcCjKSCnWT81JzU3NKyl2MNQDQv2iDN3EnNSiEjhDL6sYp8rkkkQohU9VWn5+SWoRgoVPbV5iWWZ6Yklmfp5ucWpyfl5KYlElLnGgOQB1prEz0gA
+  Edit URL: https://generator.jspm.io/#fYxBCoAgEEVdRDdpmdEJ8hIdYNApDRthHIJuXwurVfIX7/N5/K5Rqp1mkiARnTLsXR4w4o4k2Yz6zsC+h4gsb9Fb/jUtsHtY9QQKataSkiB/reYSHGEFCYn6jDaRAz7/9tqPwFpwWxckTfsTIAE
 -->
-<script type="importmap">
+  <script type="importmap">
 {
   "imports": {
     "@rhds/elements/rh-alert/rh-alert.js": "https://ga.jspm.io/npm:@rhds/elements@1.1.1/elements/rh-alert/rh-alert.js",
+    "@rhds/elements/rh-card/rh-card.js": "https://ga.jspm.io/npm:@rhds/elements@1.1.1/elements/rh-card/rh-card.js",
     "@rhds/elements/rh-cta/rh-cta.js": "https://ga.jspm.io/npm:@rhds/elements@1.1.1/elements/rh-cta/rh-cta.js",
     "@rhds/elements/rh-footer/rh-footer.js": "https://ga.jspm.io/npm:@rhds/elements@1.1.1/elements/rh-footer/rh-footer.js",
-    "@rhds/elements/rh-navigation-secondary/rh-navigation-secondary.js": "https://ga.jspm.io/npm:@rhds/elements@1.1.1/elements/rh-navigation-secondary/rh-navigation-secondary.js"
+    "@rhds/elements/rh-navigation-secondary/rh-navigation-secondary.js": "https://ga.jspm.io/npm:@rhds/elements@1.1.1/elements/rh-navigation-secondary/rh-navigation-secondary.js",
+    "@rhds/elements/rh-tag/rh-tag.js": "https://ga.jspm.io/npm:@rhds/elements@1.1.1/elements/rh-tag/rh-tag.js"
   },
   "scopes": {
     "https://ga.jspm.io/": {
@@ -28,7 +30,7 @@
     },
     "https://ga.jspm.io/npm:@patternfly/elements@2.4.0/": {
       "lit": "https://ga.jspm.io/npm:lit@2.6.1/index.js",
-      "lit/decorators/": "https://ga.jspm.io/npm:lit@2.6.1/decorators/"
+      "lit/": "https://ga.jspm.io/npm:lit@2.6.1/"
     }
   }
 }
@@ -42,6 +44,7 @@
   import { RhFooter } from '@rhds/elements/rh-footer/rh-footer.js';
   import { RhCta } from '@rhds/elements/rh-cta/rh-cta.js';
   import { RhAlert } from '@rhds/elements/rh-alert/rh-alert.js';
+  import { RhTag } from '@rhds/elements/rh-tag/rh-tag.js';
 </script>
 
 {{- with resources.Get "js/main.js" }}
