--- a/layouts/partials/rhds/nav.html
+++ b/layouts/partials/rhds/nav.html
@@ -94,4 +94,5 @@
       </rh-navigation-secondary-dropdown>
     </li>
   </ul>
+  <rh-cta slot="cta"><a href="https://github.com/rh-mobb/documentation">Github</a></rh-cta>
 </rh-navigation-secondary>
