--- a/themes/rhds/layouts/_default/baseof.html
+++ b/themes/rhds/layouts/_default/baseof.html
@@ -10,6 +10,7 @@
   <main>
     {{ block "main" . }}{{ end }}
   </main>
+  {{ partial "collaborate.html" . }}
   {{ partial "rhds/footer.html" .}}
 </body>
 </html>
