--- a/layouts/partials/rhds/hero.html
+++ b/layouts/partials/rhds/hero.html
@@ -1,10 +1,9 @@
 <section id="hero">
   <div class="hero-content">
-    <h1>Quickstarts / Getting Started</h1>
-    <p>Get started with using Red Hat OpenShift on AWS (ROSA) or Azure Red Hat OpenShift (ARO)</p>
+    <h1>Advanced Managed OpenShift</h1>
+    <p>Content here... Lorem Ipsum Dolor</p>
     <div class="hero-cta">
-      <rh-cta variant="primary"><a href="/docs/rosa/sts/">Red Hat OpenShift on AWS (ROSA)</a></rh-cta>
-      <rh-cta variant="secondary"><a href="/docs/quickstart-aro/">Azure Red Hat OpenShift (ARO)</a></rh-cta>
+      <rh-cta variant="primary"><a href="#">Call to Action</a></rh-cta>
     </div>
   </div>
 </section>
