fix: update navtitle

--- a/layouts/partials/rhds/nav.html
+++ b/layouts/partials/rhds/nav.html
@@ -1,6 +1,6 @@
 <rh-navigation-secondary role="navigation">
   <a href="/" slot="logo" id="logo-id">
-    Managed OpenShift Black Belt
+    Cloud Experts Documentation
   </a>
   <ul slot="nav" aria-labelledby="logo-id">
     <li>
