--- a/layouts/partials/rhds/hero.html
+++ b/layouts/partials/rhds/hero.html
@@ -1,9 +1,8 @@
 <section id="hero">
-  <div class="hero-content">
-    <h1>Advanced Managed OpenShift</h1>
-    <p>Content here... Lorem Ipsum Dolor</p>
-    <div class="hero-cta">
-      <rh-cta variant="primary"><a href="#">Call to Action</a></rh-cta>
+  <div class="hero-container">
+    <div class="hero-content">
+      <h1>Managed OpenShift Tutorials</h1>
+      <p>Step-by-step tutorials from Red Hat experts to help you get the most out of your Managed OpenShift cluster.</p>
     </div>
   </div>
 </section>
