--- a/themes/rhds/assets/css/main.css
+++ b/themes/rhds/assets/css/main.css
@@ -112,8 +112,6 @@ main {
   padding: var(--rh-space-lg, 16px) var(--rh-space-lg, 16px) var(--rh-length-5xl, 80px);
 }
 
-
-
 @media screen and (min-width: 768px) {
   main {
     margin: 0 auto;
@@ -123,10 +121,8 @@ main {
 
 #hero {
   padding-block: var(--rh-space-xl, 32px);
-  background-image: url(/images/openshift-desktop-hero.svg);
-  background-repeat: no-repeat;
   background-color: var(--rh-color-surface-lighter, #f2f2f2);
-}
+}  
 
 #hero :is(h1, h2, h3, h4, h5, h6) {
   font-weight: 400;
@@ -134,6 +130,12 @@ main {
 
 #hero p {
   font-size: var(--rh-font-size-code-lg, 1.125rem);
+}
+
+#hero .hero-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  padding: var(--rh-spacer-lg, 16px);
 }
 
 #hero .hero-cta {
@@ -144,14 +146,34 @@ main {
   margin-inline-start: var(--rh-space-md, 8px);
 }
 
+@media screen and (min-width: 576px) {
+  #hero {
+    background-image: url(/images/openshift-desktop-hero.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  #hero .hero-container {
+    grid-template-columns: 1.5fr 0.5fr;
+  }
+}
+
 @media screen and (min-width: 768px) {
   #hero {
     padding-block: var(--rh-length-4xl, 64px);
+    padding: var(--rh-spacer-lg, 16px) var(--rh-space-2xl, 32px);
   }
 
-  #hero .hero-content {
+  #hero .hero-container {
+    grid-template-columns: 1.25fr 0.75fr;
     margin: 0 auto;
     max-width: 1320px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  #hero .hero-container {
+    grid-template-columns: 1.75fr 1.25fr;
   }
 }
 
