--- a/themes/rhds/assets/css/main.css
+++ b/themes/rhds/assets/css/main.css
@@ -128,6 +128,10 @@ main {
   font-weight: 400;
 }
 
+#hero h1 {
+  margin-bottom: var(--rh-spacer-lg, 16px);
+}
+
 #hero p {
   font-size: var(--rh-font-size-code-lg, 1.125rem);
 }
