--- a/themes/rhds/layouts/partials/collaborate.html
+++ b/themes/rhds/layouts/partials/collaborate.html
@@ -5,7 +5,7 @@
         <p>Eureka moments don't drive progress. Collaboration drives progress. It always has and always will.</p>
         <p>Help improve our documentation <a href="https://www.redhat.com/en/open-source/red-hat-way">The Red Hat Way</a>.</p>
         <div class="cta-group">
-          <rh-cta variant="brick"><pf-icon set="fab" icon="github"></pf-icon> <a href="https://github.com/rh-mobb/documentation">Github</a></rh-cta>
+          <rh-cta variant="brick"><pf-icon set="fab" icon="github"></pf-icon> <a href="https://github.com/rh-mobb/documentation">GitHub</a></rh-cta>
           {{- if .Site.Params.editURL }}
             {{- $File := .File }}
             {{- $Site := .Site }}
