fix: update secondary navigation

--- a/layouts/partials/rhds/nav.html
+++ b/layouts/partials/rhds/nav.html
@@ -14,26 +14,14 @@
         <a href="#dropdown-fallback-url" slot="link">OpenShift Dedicated</a>
         <rh-navigation-secondary-menu slot="menu">
           <ul>
-            <li><a href="#">OpenShift Dedicated on Google Cloud Platform</a></li>
-            <li><a href="#">OpenShift Dedicated on Amazon Web Services</a></li>
+            <li><a href="/docs/gcp/">OpenShift Dedicated on GCP</a></li>
+            <li><a href="#">OpenShift Dedicated on AWS</a></li>
           </ul>
         </rh-navigation-secondary-menu>
       </rh-navigation-secondary-dropdown>
     </li>
     <li>
-      <rh-navigation-secondary-dropdown>
-        <a href="#dropdown-fallback-url" slot="link">Other Products</a>
-        <rh-navigation-secondary-menu slot="menu">
-          <ul>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-          </ul>
-        </rh-navigation-secondary-menu>
-      </rh-navigation-secondary-dropdown>
+      <a href="/docs/redhat/" slot="link">Other Products</a>
     </li>
   </ul>
 </rh-navigation-secondary>
