adding red hat favicon

--- a/themes/rhds/layouts/partials/head.html
+++ b/themes/rhds/layouts/partials/head.html
@@ -1,4 +1,5 @@
 {{ partial "head/meta.html" .}}
+{{ partial "head/favicon.html" .}}
 {{ partial "head/tracking.html" .}}
 <title>{{ if .IsHome }}{{ site.Title }}{{ else }}{{ printf "%s | %s" .Title site.Title }}{{ end }}</title>
 {{ partialCached "head/css.html" . }}
