--- a/themes/rhds/assets/css/main.css
+++ b/themes/rhds/assets/css/main.css
@@ -33,27 +33,33 @@ a:focus {
   font-weight: var(--rh-font-weight-heading-medium, 500);
 }
 
-h1 {
+h1,
+.h1 {
   font-size: var(--rh-font-size-heading-2xl, 3rem);
 }
 
-h2 {
+h2,
+.h2 {
   font-size: var(--rh-font-size-heading-xl, 2.5rem);
 }
 
-h3 {
+h3,
+.h3 {
   font-size: var(--rh-font-size-heading-lg, 2.25rem);
 }
 
-h4 {
+h4,
+.h4 {
   font-size: var(--rh-font-size-heading-md, 1.75rem);
 }
 
-h5 {
+h5,
+.h5 {
   font-size: var(--rh-font-size-heading-sm, 1.5rem);
 }
 
-h6 {
+h6,
+.h6 {
   font-size: var(--rh-font-size-heading-xs, 1.25rem);
 }
 
