--- a/themes/rhds/layouts/_default/list.html
+++ b/themes/rhds/layouts/_default/list.html
@@ -1,11 +1,11 @@
 {{ define "main" }}
   <section class="list">
     {{- partial "breadcrumbs.html" . }}
-    <h1>{{ .Title }}</h1>
+    <h1 class="h2">{{ .Title }}</h1>
     {{- partial "rhds/alert.html" . }}
     {{ .Content }}
     {{ range .Pages }}
-      <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
+      <h2 class="h4"><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
       {{ .Summary }}
     {{ end }}
   </section>
