--- a/themes/rhds/layouts/partials/head.html
+++ b/themes/rhds/layouts/partials/head.html
@@ -2,5 +2,6 @@
 {{ partial "head/favicon.html" .}}
 {{ partial "head/tracking.html" .}}
 <title>{{ if .IsHome }}{{ site.Title }}{{ else }}{{ printf "%s | %s" .Title site.Title }}{{ end }}</title>
+{{ partial "head/fonts.html" .}}
 {{ partialCached "head/css.html" . }}
 {{ partialCached "head/js.html" . }}
