--- a/themes/relearn/static/css/fonts.css
+++ b/themes/relearn/static/css/fonts.css
@@ -2,7 +2,7 @@
     font-family: 'Work Sans';
     font-style: normal;
     font-weight: 200;
-    src: url("../experts/fonts/WorkSans-ExtraLight.woff") format("woff2"), url("../experts/fonts/WorkSans-ExtraLight.woff") format("woff");
+    src: url("../fonts/WorkSans-ExtraLight.woff") format("woff2"), url("../fonts/WorkSans-ExtraLight.woff") format("woff");
     font-display: swap;
 }
 
@@ -10,7 +10,7 @@
     font-family: 'Work Sans';
     font-style: normal;
     font-weight: 300;
-    src: url("../experts/fonts/WorkSans-Light.woff2") format("woff2"), url("../experts/fonts/WorkSans-Light.woff") format("woff");
+    src: url("../fonts/WorkSans-Light.woff2") format("woff2"), url("../fonts/WorkSans-Light.woff") format("woff");
     font-display: swap;
 }
 
@@ -18,7 +18,7 @@
     font-family: 'Work Sans';
     font-style: normal;
     font-weight: 400;
-    src: url("../experts/fonts/WorkSans-Regular.woff2") format("woff2"), url("../experts/fonts/WorkSans-Regular.woff") format("woff");
+    src: url("../fonts/WorkSans-Regular.woff2") format("woff2"), url("../fonts/WorkSans-Regular.woff") format("woff");
     font-display: swap;
 }
 
@@ -26,7 +26,7 @@
     font-family: 'Work Sans';
     font-style: normal;
     font-weight: 500;
-    src: url("../experts/fonts/WorkSans-Medium.woff2") format("woff2"), url("../experts/fonts/WorkSans-Medium.woff") format("woff");
+    src: url("../fonts/WorkSans-Medium.woff2") format("woff2"), url("../fonts/WorkSans-Medium.woff") format("woff");
     font-display: swap;
 }
 
@@ -34,6 +34,6 @@
     font-family: 'Work Sans';
     font-style: normal;
     font-weight: 600;
-    src: url("../experts/fonts/WorkSans-Bold.woff2") format("woff2"), url("../experts/fonts/WorkSans-Bold.woff") format("woff");
+    src: url("../fonts/WorkSans-Bold.woff2") format("woff2"), url("../fonts/WorkSans-Bold.woff") format("woff");
     font-display: swap;
 }
