fix: move from jsmp cdn to bundled js dependencies

--- a/themes/rhds/layouts/partials/head/js.html
+++ b/themes/rhds/layouts/partials/head/js.html
@@ -1,64 +1,4 @@
-<!--
-  JSPM Generator Import Map
-  Edit URL: https://generator.jspm.io/#hY8xDsIwDEUzsHAQxqaAOEAvwQFM47ZBwa6SX6SeHipUCAtBHv6T/WzJu40x24c5CzwCO9OMBHCULsw1B76xIDVHe7L7wqgeu+oyASqZ7DX92YBqgB+/8LUTB5eyfbBL1XGoKHDEB0pmS9G9s+iB1ihZneryQqaSK3T3PcGrVIlbFUdx/tUv3QH1ayzWExbzY8qiAQ
--->
-<script type="importmap">
-{
-  "imports": {
-    "@patternfly/elements": "https://ga.jspm.io/npm:@patternfly/elements@2.4.0/pfe.min.js",
-    "@patternfly/elements/pf-button/pf-button.js": "https://ga.jspm.io/npm:@patternfly/elements@2.4.0/pf-button/pf-button.js",
-    "@patternfly/elements/pf-tooltip/pf-tooltip.js": "https://ga.jspm.io/npm:@patternfly/elements@2.4.0/pf-tooltip/pf-tooltip.js",
-    "@rhds/elements/rh-alert/rh-alert.js": "https://ga.jspm.io/npm:@rhds/elements@1.1.1/elements/rh-alert/rh-alert.js",
-    "@rhds/elements/rh-card/rh-card.js": "https://ga.jspm.io/npm:@rhds/elements@1.1.1/elements/rh-card/rh-card.js",
-    "@rhds/elements/rh-cta/rh-cta.js": "https://ga.jspm.io/npm:@rhds/elements@1.1.1/elements/rh-cta/rh-cta.js",
-    "@rhds/elements/rh-footer/rh-footer.js": "https://ga.jspm.io/npm:@rhds/elements@1.1.1/elements/rh-footer/rh-footer.js",
-    "@rhds/elements/rh-navigation-secondary/rh-navigation-secondary.js": "https://ga.jspm.io/npm:@rhds/elements@1.1.1/elements/rh-navigation-secondary/rh-navigation-secondary.js",
-    "@rhds/elements/rh-tag/rh-tag.js": "https://ga.jspm.io/npm:@rhds/elements@1.1.1/elements/rh-tag/rh-tag.js"
-  },
-  "scopes": {
-    "https://ga.jspm.io/": {
-      "@floating-ui/core": "https://ga.jspm.io/npm:@floating-ui/core@1.5.0/dist/floating-ui.core.mjs",
-      "@floating-ui/dom": "https://ga.jspm.io/npm:@floating-ui/dom@1.5.3/dist/floating-ui.dom.mjs",
-      "@floating-ui/utils": "https://ga.jspm.io/npm:@floating-ui/utils@0.1.4/dist/floating-ui.utils.mjs",
-      "@floating-ui/utils/dom": "https://ga.jspm.io/npm:@floating-ui/utils@0.1.4/dom/dist/floating-ui.utils.dom.mjs",
-      "@lit/reactive-element": "https://ga.jspm.io/npm:@lit/reactive-element@1.6.3/development/reactive-element.js",
-      "@lit/reactive-element/decorators/": "https://ga.jspm.io/npm:@lit/reactive-element@1.6.3/development/decorators/",
-      "@patternfly/elements/": "https://ga.jspm.io/npm:@patternfly/elements@2.4.0/",
-      "@patternfly/pfe-core": "https://ga.jspm.io/npm:@patternfly/pfe-core@2.4.1/core.js",
-      "@patternfly/pfe-core/": "https://ga.jspm.io/npm:@patternfly/pfe-core@2.4.1/",
-      "@rhds/elements/rh-accordion/rh-accordion.js": "https://ga.jspm.io/npm:@rhds/elements@1.1.1/elements/rh-accordion/rh-accordion.js",
-      "@rhds/tokens/media.js": "https://ga.jspm.io/npm:@rhds/tokens@1.1.2/js/media.js",
-      "lit": "https://ga.jspm.io/npm:lit@2.6.1/index.js",
-      "lit-element/lit-element.js": "https://ga.jspm.io/npm:lit-element@3.3.3/development/lit-element.js",
-      "lit-html": "https://ga.jspm.io/npm:lit-html@2.8.0/development/lit-html.js",
-      "lit-html/": "https://ga.jspm.io/npm:lit-html@2.8.0/development/",
-      "lit/": "https://ga.jspm.io/npm:lit@2.6.1/",
-      "tslib": "https://ga.jspm.io/npm:tslib@2.6.2/tslib.es6.mjs"
-    },
-    "https://ga.jspm.io/npm:@patternfly/pfe-core@2.4.1/": {
-      "lit": "https://ga.jspm.io/npm:lit@2.8.0/index.js"
-    },
-    "https://ga.jspm.io/npm:@rhds/elements@1.1.1/": {
-      "lit": "https://ga.jspm.io/npm:lit@2.8.0/index.js",
-      "lit/": "https://ga.jspm.io/npm:lit@2.8.0/"
-    }
-  }
-}
-</script>
-
-<!-- ES Module Shims: Import maps polyfill for older browsers without import maps support (eg Safari 16.3) -->
-<script async src="https://ga.jspm.io/npm:es-module-shims@1.8.0/dist/es-module-shims.js" crossorigin="anonymous"></script>
-
-<script type="module">
-  import { RhNavigationSecondary } from '@rhds/elements/rh-navigation-secondary/rh-navigation-secondary.js';
-  import { RhFooter } from '@rhds/elements/rh-footer/rh-footer.js';
-  import { RhCta } from '@rhds/elements/rh-cta/rh-cta.js';
-  import { RhAlert } from '@rhds/elements/rh-alert/rh-alert.js';
-  import { RhTag } from '@rhds/elements/rh-tag/rh-tag.js';
-
-  import { PfTooltip } from '@patternfly/elements/pf-tooltip/pf-tooltip.js';
-  import { PfButton } from '@patternfly/elements/pf-button/pf-button.js';
-</script>
+ <script type="module" src="/js/rhds/bundle.js"></script>
 
 {{- with resources.Get "js/main.js" }}
   {{- if eq hugo.Environment "development" }}
