--- a/themes/rhds/layouts/partials/head/css.html
+++ b/themes/rhds/layouts/partials/head/css.html
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="https://ga.jspm.io/npm:@rhds/elements@1.1.1/elements/rh-navigation-secondary/rh-navigation-secondary-lightdom.css">
-<link rel="stylesheet" href="https://ga.jspm.io/npm:@rhds/elements@1.1.1/elements/rh-footer/rh-footer-lightdom.css">
+<link rel="stylesheet" href="css/rhds/rh-navigation-secondary-lightdom.css">
+<link rel="stylesheet" href="css/rhds/rh-footer-lightdom.css">
 
 {{- with resources.Get "css/main.css" }}
   {{- if eq hugo.Environment "development" }}
