Fixing broken JS path

--- a/themes/rhds/layouts/partials/head/js.html
+++ b/themes/rhds/layouts/partials/head/js.html
@@ -1,4 +1,4 @@
- <script type="module" src="/js/rhds/bundle.js"></script>
+ <script type="module" src="/experts/js/rhds/bundle.js"></script>
 
 {{- with resources.Get "js/main.js" }}
   {{- if eq hugo.Environment "development" }}
